// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title component should be able to add a custom class 1`] = `
<h1
  className="header small left someClass"
>
  Title
</h1>
`;

exports[`Title component should be able to change the alignment 1`] = `
<h1
  className="header small left "
>
  Title
</h1>
`;

exports[`Title component should be able to change the alignment 2`] = `
<h1
  className="header small center "
>
  Title
</h1>
`;

exports[`Title component should render the big Title correctly 1`] = `
<h1
  className="header big left "
>
  Title
</h1>
`;

exports[`Title component should render the small Title correctly 1`] = `
<h1
  className="header small left "
>
  Title
</h1>
`;
